Listing of notable changes by release. More detail is usually found in the Git
commit messages and/or the pull requests.

(unreleased)

* OCMock now requires iOS 8 as minimum deployment target
* Managed objects can now be mocked (Alan Fineberg, Kyle Van Essen)
* Fixed bug causing verifyWithDelay to be held up by rejects (Nikolay Kasyanov)
* Fixed bug where a mock would not claim conformance to protocols declared in
  a superclass (Werner Altewischer)


OCMock 3.3.1 (2016-07-01)

* Now throwing an exception when an attempt is made to stub the init method.
* Fixed crash when trying to mock NSArray.


OCMock 3.3 (2016-04-12)

* Made the use of mock objects thread safe. You still have to setup the mocks
  and verify them from a main thread (Ian Anderson)
* Added modern syntax for reject (Piotr Tobolski)


OCMock 3.2.2 (2016-01-20)

* Fixed recently introduced bug that caused crashes when using NULL pointers
  with the pass-by-ref argument setter (Ian Anderson)


OCMock 3.2.1 (2016-01-13)

* Added support for tvOS (Nikita Lutsenko)
* Disposing dynamically generated subclasses after use (David Stites)
* Build script now signs frameworks in releases. The signing identity can
  be changed in the script.


OCMock 3.2 (2015-10-03)

* Can mock dynamic properties (imhuntingwabbits)
* Can invoke blocks passed as arguments to stubs (Stephen Fortune)
* Stubbed exceptions are no longer re-raised in verify
* Fixed C++ compilation issues (Jonathan Crooke, Daniel Demiss)
* Add module support for the OS X framework (Ian Anderson)


OCMock 3.1.4 / 3.1.5 (2015-08-26)

* Fixed deployment target in podspec


OCMock 3.1.3 (2015-08-12)

* Now throwing exception when trying to create mocks for nil (Nick Gravelyn)
* Fixed ARC related bug when boxing macro args (Richard Ross)
* Added target for dynamic iOS framework, which makes OCMock compatible with
  Carthage (Piet Brauer)
* Memory management and other small bug fixes


OCMock 3.1.2 (2015-01-08)
